--- a/fiveware-test-web/WebContent/WEB-INF/web.xml
+++ b/fiveware-test-web/WebContent/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>br.com.controller.AppConfig</param-value>
+			<param-value>br.com.conf.AppConfig</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
