--- a/pom.xml
+++ b/pom.xml
@@ -51,4 +51,10 @@
 
 	</build>
 
+	<modules>
+		<module>fiveware-test-model</module>
+		<module>fiveware-test-service</module>
+		<module>fiveware-test-web</module>
+	</modules>
+
 </project>
