--- a/fiveware-test-service/pom.xml
+++ b/fiveware-test-service/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fiveware-test-service</groupId>
 	<artifactId>fiveware-test-service</artifactId>
+	<packaging>jar</packaging>
 	
 	<parent>
 		<groupId>org.fiveware</groupId>
