--- a/fiveware-test-service/pom.xml
+++ b/fiveware-test-service/pom.xml
@@ -1,16 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>fiveware-test-service</groupId>
-	<artifactId>fiveware-test-service</artifactId>
-	<packaging>jar</packaging>
 	
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>fiveware-test-service</artifactId>
+	<packaging>jar</packaging>	
 	<parent>
 		<groupId>org.fiveware</groupId>
 		<artifactId>fiveware-test</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -47,6 +46,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.fiveware</groupId>
+			<artifactId>fiveware-test-model</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
